# electron-fastapi-react

./: .gitignore  .prettierignore  .prettierrc  README.md  electron.vite.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.web.json
api/: api.spec  logger.py  main.py  pyproject.toml  run.py
scripts/: build.js  clean.js  setup.js  setup.sh
src/: index.ts  main-logger.ts  preload.ts  renderer-logger.ts  renderer.d.ts
src/common/: logger-types.ts  renderer-api.d.ts  utils.ts
src/main/: index.ts  logger.ts  network.ts
src/preload/: index.ts  tsconfig.json
src/renderer/: App.tsx  app.css  index.css  index.html  logger.ts  main.tsx
src/renderer/components/: Button.tsx  StatusCard.tsx
src/renderer/components/icons/: AlertTriangleIcon.tsx  CheckIcon.tsx  ChevronUp.tsx  Copy.tsx  FeatureCheckIcon.tsx  Filter.tsx  Maximize.tsx  Menu.tsx  Minimize.tsx  RefreshCw.tsx  RefreshIcon.tsx  SpinnerIcon.tsx  StatusDotIcon.tsx  StopIcon.tsx  Trash.tsx  WarningIcon.tsx  icon.types.ts  index.ts
src/renderer/features/console/: Console.tsx  ConsoleContext.tsx  ErrorBoundaryWithConsole.tsx
src/renderer/features/console/components/: ConsoleFilters.tsx  ConsoleHeader.tsx  ConsoleLogItem.tsx  ConsoleLogList.tsx  ConsoleToolbar.tsx  FilterButton.tsx  MessageFormatter.tsx  MinimizedConsoleButton.tsx  index.ts
src/renderer/features/console/logger/: logger.ts
src/renderer/features/logs/: ActionButtons.tsx  Console.tsx  LogEntry.tsx  LogList.tsx  LoggingContext.tsx  StatusIndicator.tsx
src/renderer/hooks/: useApiSidecar.ts  useLocalStorage.ts  useSidecar.ts
